--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday, Cutiee  with  a  cutiee!!!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">May the God and Good's always be with you! ;)</h5>
             </div>
         </div>
 
