--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Harsh</span>
+                <span id="name">Abhas</span>
             </h1>
             <p class="two" id="greetingText">I really admire you btw, Because we have known each other for quite a long time!</p>
         </div>
